# vinyl-recorder

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
assets/: notes  run_compose_prod_vps.md
scripts/: run_bulk_identification.py
vinyl/: play.py
vinyl_recorder/: album_recommender.py  collection_tracker.py  config.py  discogs.py  ghseets.py  llm_client.py  telegram_bot.py  vinyl_cover_identifier.py  web_app.py
vinyl_recorder/templates/: index.html
